# plasma-desktop-branding

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  meson.build  meson_options.txt  mkrelease.sh
applications/: kde-mimeapps.list  meson.build
env/: 10-qpaplatform.sh  50-qtlogging.sh  50-ssh.sh  Makefile.am  meson.build
konsole/: meson.build  solus.profile
sddm/: 20_plasma_config.conf  Makefile.am  meson.build
xdg/: Makefile.am  baloofilerc  breezerc  katepartrc  kcm-about-distrorc  kcminputrc  kdeglobals  klipperrc  konsolerc  kscreenlockerrc  kwinrc  kwinrulesrc  meson.build  plasmarc  spectaclerc
