AC_INIT([Plasma Desktop Branding], 1, [peter@solus-project.com], [plasma-desktop-branding], [https://solus-project.com/])
AM_INIT_AUTOMAKE([-Wno-portability no-dist-gzip dist-xz foreign subdir-objects 1.9 tar-ustar])
AC_PREFIX_DEFAULT(/usr/local)

AC_CONFIG_FILES([Makefile
                sddm/Makefile
                xdg/Makefile])
AC_OUTPUT
