EXTRA_DIST = \
	baloofilerc \
	katepartrc \
	kcm-about-distrorc \
	kcminputrc \
	kded5rc \
	kdeglobals \
	ksplashrc \
	kwinrc \
	plasmarc \
	touchpadrc

xdgdir = $(datadir)/xdg
xdg_DATA = \
	baloofilerc \
	katepartrc \
	kcm-about-distrorc \
	kcminputrc \
	kded5rc \
	kdeglobals \
	ksplashrc \
	kwinrc \
	plasmarc \
	touchpadrc
