xdg_data = [
    'baloofilerc',
    'breezerc',
    'katepartrc',
    'kcm-about-distrorc',
    'kcminputrc',
    'kded5rc',
    'kdeglobals',
    'ksplashrc',
    'kwinrc',
    'kwinrulesrc',
    'plasmarc',
    'spectaclerc',
    'touchpadrc',
]

xdg_dir = join_paths(path_datadir, 'xdg')

install_data(
    xdg_data,
    install_dir: xdg_dir,
)
